# keycloak-ansible-module

./: .gitignore  README.md  galaxy.yml  setup.cfg  setup.py
plugins/module_utils/: __init__.py  ansible_rhsso.py  ansible_state.py
plugins/modules/: add_roles_to_group.py  authentication_flow.py  join_group.py  login.py  resource.py  resources_from_folder.py
robot/: README.md  galaxy.yml
test/: README.md  ansible_rhsso.py  galaxy.yml
test/payloads/clients/client-0/: dc.json
test/payloads/clients/client-1/: marvel.json
