[metadata]
name = keycloak-robot
summary = Ansible Collection for Keycloak
description-file =
    README.md

author = Cesar Valdez
author-email = cesarv01@yahoo.com
home-page = 
classifier =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/keycloak/robot/ = README.md
    share/ansible/collections/ansible_collections/keycloak/robot/roles/ = roles/*
    share/ansible/collections/ansible_collections/keycloak/robot/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/keycloak/robot/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/keycloak/robot/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/keycloak/robot/docs/ = docs/*
    share/ansible/collections/ansible_collections/keycloak/robot/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
